src/render/snapshots/mermaid_cli__render__snapshots__system_notice_and_checkpoint_80x24.snap
---
source: src/render/snapshots.rs
expression: frame
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
   Safety mode changed to read-only                                             
                                                                                
╭──────────────────────────────────────────────────────────────────────────────╮
│ >                                                                            │
╰──────────────────────────────────────────────────────────────────────────────╯
safety: auto · reasoning: medium                                     ollama/test
