src/render/snapshots/mermaid_cli__render__snapshots__task_checklist_collapsed_80x24.snap
---
source: src/render/snapshots.rs
expression: frame
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 > ship the feature                                                             
                                                                                
 ● Bash(cargo check)                                                            
                                                                                
 ◐ Wiring the broker through ExecContext...                                     
   (esc to interrupt · ctrl+b to background · 3s · ↓ 0 tokens)                  
  ⎿ Next: Render the checklist band                                             
╭──────────────────────────────────────────────────────────────────────────────╮
│ >                                                                            │
╰──────────────────────────────────────────────────────────────────────────────╯
safety: auto · reasoning: medium                                     ollama/test
