src/render/snapshots/mermaid_cli__render__snapshots__task_checklist_expanded_80x24.snap
---
source: src/render/snapshots.rs
expression: frame
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 > ship the feature                                                             
                                                                                
 ● Bash(cargo check)                                                            
                                                                                
 ◐ Wiring the broker through ExecContext...                                     
   (esc to interrupt · ctrl+b to background · 3s · ↓ 0 tokens)                  
  ⎿ √ Audit the call sites (2m 10s · 8.4k tok)                                  
    √ Add TaskStore to the domain (1m 10s · 3.5k tok)                           
    ■ Wire the broker through ExecContext                                       
    □ Render the checklist band                                                 
    □ Update the changelog                                                      
    □ Double-check the docs (you)                                               
╭──────────────────────────────────────────────────────────────────────────────╮
│ >                                                                            │
╰──────────────────────────────────────────────────────────────────────────────╯
safety: auto · reasoning: medium                                     ollama/test
